# munegon_app

./: .env.example  .gitignore  add_column.js  astro.config.mjs  bump.cjs  bump_version.py  clean_local_sales.ts  clean_products.ts  clean_seeds.cjs  clean_supabase_sales.ts  clean_users.ts  diff.txt  inspect_sales.ts  package-lock.json  package.json  patch.cjs  patch_caja.py  patch_linea.py  patch_rust.cjs  patch_sync.cjs  patch_sync.py  patch_sync2.cjs  patch_sync3.cjs  patch_sync4.cjs  patch_ui.cjs  patch_ventas.py  prisma.config.ts  skills-lock.json  supabase_schema.sql  test-sales-0.ts  test-sales.ts  tsconfig.json
.agents/skills/updategithub/: SKILL.md
.github/workflows/: release.yml
docs/: RELEASE_PROCESS.md
docs/superpowers/specs/: 2026-06-27-filtros-inventario-design.md
prisma/: schema.prisma  seed.ts
prisma/migrations/20260603222504_init/: migration.sql
prisma/migrations/20260605022723_cortes_caja/: migration.sql
prisma/migrations/20260615052156_add_cuentas_por_cobrar/: migration.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  sync_watcher.rs
src-tauri/src/commands/: comandas.rs  mod.rs  reportes.rs  ventas.rs
src/components/: AuthGuard.tsx  LoginScreen.astro  Mantenimiento.tsx  Sidebar.tsx
src/layouts/: BaseLayout.astro
src/lib/: api.ts  auth.ts  auto-updater.ts  prisma.ts  sync-listener.ts
src/pages/: administracion.astro  caja.astro  comandas.astro  deudas.astro  index.astro  inventario.astro  reportes.astro
src/styles/: admin.css  caja.css  comandas.css  global.css  sidebar.css
src/workers/: sync.worker.ts
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
(+15 files in other folders)
