[package]
name = "munegon-pos"
version = "1.0.0"
description = "Muñegon POS & Inventario — Sistema Offline-First"
authors = ["Muñegon Dev Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }   # Runtime async para el watcher
reqwest          = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }  # Chequeo de red
printpdf         = "0.7"                                      # Generación de PDF nativa
uuid             = { version = "1", features = ["v4"] }
rusqlite         = { version = "0.31", features = ["bundled"] }  # SQLite embebido para commands
dirs             = "5"                                        # Rutas de carpetas del sistema (Documentos)
sha2             = "0.10"                                     # Hashing SHA-256 para verificación de PIN
dotenvy          = "0.15"                                     # Carga automática de .env en desarrollo


